code/spinkube/spingotest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spingotest
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: jc-wasm.digitalinnovation.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spingotest
                port:
                  number: 80
